[package]
name = "nes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
paste = "1.0.14"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "getrandom"] }
spin_sleep = "1.2.0"
sdl2 = "0.36.0"

[dev-dependencies]
glob = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
